# fumi

./: .gitignore  Cargo.toml  README.MD  config.example.toml
.github/: dependabot.yml
src/: app.rs  config.rs  event.rs  main.rs  run.rs
src/app/: actions.rs  mod.rs  state.rs
src/daemon/ipc/: mod.rs
src/github/: mod.rs  types.rs
src/handler/: key.rs  mod.rs  worker.rs
src/ui/: filetree.rs  input.rs  mod.rs  preview.rs  statusbar.rs
src/worker/: api.rs  download.rs  mod.rs
