[package]
name = "fumi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow      = "1.0.102"
crossterm   = "0.29.0"
dirs        = "6.0.0"
futures     = "0.3.32"
ratatui     = "0.30.0"
reqwest     = { version = "0.13.2", features = ["json", "stream"] }
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.149"
tokio       = { version = "1.50.0", features = ["full"] }
tokio-util  = { version = "0.7.18", features = ["io"] }
toml        = "1.0.7"

[profile.release]
opt-level = 3
strip     = true
lto       = "thin"
